# im_web

./: .env  CHANGELOG.md  Cargo.toml  README.md  cliff.toml
chat_server/: Cargo.toml  application.yml  index.html  test.rest
chat_server/sql/: init.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs
chat_server/src/handlers/: mod.rs  user.rs
chat_server/src/models/: mod.rs  user.rs  workspace.rs
chat_server/src/routes/: mod.rs  user.rs
migrations/: 20251015214202_initial.sql  20251017222147_workspace.sql
notify_server/: Cargo.toml  index.html
notify_server/src/: lib.rs  main.rs  sse.rs
