[package]
name = "notify_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
serde_yaml = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
futures = "0.3.31"
tokio-stream = "0.1.17"
